# Distance-Leaderboard

./: .gitignore  README.md  create_db.sql  notes.sql
Browser/: package-lock.json  package.json  server.js
Browser/views/: paginator.pug
OfficialLevelsRetriever/: Entry.cs  OfficialLevelsRetriever.sln
docker/: run-all.sh  update.sh
docker/browser/: Dockerfile  run.sh
docker/evaluator/: Dockerfile  install.sh  run.sh
docker/evaluator/etc/: xdummy.conf
docker/evaluator/etc/supervisor/conf.d/: steam.conf  x11vnc.conf
docker/evaluator/home/user/: entry.sh
src/OfficialLevelsRetriever/: OfficialLevelsRetriever.csproj
src/browser/: package-lock.json  package.json  server.js
src/browser/views/: default.pug  level.pug  levels.pug  player.pug  players.pug
src/evaluator/: Cargo.toml  cargo_linux_docker.sh  cargo_windows.sh  create_db.sql
src/evaluator/.cargo/: config
src/evaluator/cargo_linux_docker/: Dockerfile
src/evaluator/src/: db_create.rs  main.rs  workshop.rs
test_app/: Cargo.lock_  Cargo.toml  official_levels.json
test_app/src/: main.rs
