[package]
name = "test_app"
version = "0.1.0"
authors = ["Corecii <corecii@corecii.com>"]
edition = "2018"

[dependencies]
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await",  "nightly"] }
futures-util-preview = { version = "=0.3.0-alpha.18" }
futures-timer = "0.3"
steamworks = { path = "D:\\DevelopmentUnsynced\\steamworks-rs" }
hyper = { version = "=0.13.0-alpha.2", features = ["unstable-stream"]}
hyper-tls = { git = "https://github.com/hyperium/hyper-tls" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = "=0.2.0-alpha.5"
select = "0.4.3"
tendril = "0.4.1"
rusqlite = { version = "0.20.0", features = ["bundled"]}