[package]
name = "test_app"
version = "0.1.0"
authors = ["Corecii <corecii@corecii.com>"]
edition = "2018"

[dependencies]
steamworks = { path = "D:\\DevelopmentUnsynced\\steamworks-rs" }
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
rusqlite = { version = "0.21.0", features = ["bundled"]}
reqwest = "0.10.2"
futures-timer = "3.0.2"
tokio = { version="0.2.11", features = ["full"]}